--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:css": "postcss public/assets/css/tailwind.css -o public/assets/css/styles.css --watch",
     "dev": "nodemon src/server.js",
     "migrate": "prisma migrate dev --name",
-    "studio": "prisma studio"
+    "studio": "prisma studio",
+    "seed": "node seedDB.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@prisma/client": "^5.14.0",
     "argon2": "^0.40.3",
     "autoprefixer": "^10.4.19",
+    "cookie-parser": "^1.4.6",
     "daisyui": "^4.11.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
