--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "prisma": "^5.14.0",
